Fixes too long images issue APPS-796

--- a/css/products-list.css
+++ b/css/products-list.css
@@ -60,11 +60,15 @@ html#ecwid_html body#ecwid_body .ecwid-productsList .ecwid-productsList-image .e
 
 .ecwid-productsList ul li .ecwid-productsList-name,
 .ecwid-productsList ul li .ecwid-productsList-price,
-.ecwid-productsList ul li .ecwid-productsList-image,
-.ecwid-productsList ul li .ecwid-productsList-image img
-{
+.ecwid-productsList ul li .ecwid-productsList-image {
 	width: 100%;
 	text-align: center;
+}
+
+.ecwid-productsList.width-m li .ecwid-productsList-image img {
+	text-align: center;
+	max-width:100%;
+	max-height: 300px;
 }
 
 html#ecwid_html body#ecwid_body .ecwid-productsList ul li .ecwid-productsList-name
